--- a/etc/ci/buildbot_steps.yml
+++ b/etc/ci/buildbot_steps.yml
@@ -216,15 +216,17 @@ arm32:
   AR: /usr/bin/arm-linux-gnueabihf-ar
   AS: /usr/bin/arm-linux-gnueabihf-as
   CC: /usr/bin/clang-4.0
+  CC_arm-unknown-linux-gnueabihf: /usr/bin/clang-4.0
   CFLAGS: --target=arm-unknown-linux-gnueabihf -march=armv7a -I/usr/arm-linux-gnueabihf/include/ -fuse-ld=/home/servo/servo/support/arm32/fake-ld.sh -Wno-error=unused-command-line-argument
-  # CPP: "/usr/bin/clang-4.0 -E"
+  CPP: /usr/bin/clang-4.0 -E
   CPPFLAGS: -I/usr/arm-linux-gnueabihf/include
   CXX: /usr/bin/clang++-4.0
+  CXX_arm-unknown-linux-gnueabihf: /usr/bin/clang++-4.0
   CXXFLAGS: --target=arm-unknown-linux-gnueabihf -march=armv7a -I/usr/arm-linux-gnueabihf/include/ -I/usr/arm-linux-gnueabihf/include/c++/4.8.4/arm-linux-gnueabihf -fuse-ld=/home/servo/servo/support/arm32/fake-ld.sh -Wno-error=unused-command-line-argument
   LD: /usr/bin/arm-linux-gnueabihf-ld
   OBJCOPY: /usr/bin/arm-linux-gnueabihf-objcopy
   OBJDUMP: /usr/bin/arm-linux-gnueabihf-objdump
-  # PKG_CONFIG_ALLOW_CROSS: 1
+  PKG_CONFIG_ALLOW_CROSS: 1
   RANLIB: /usr/bin/arm-linux-gnueabihf-ranlib
   STRIP: /usr/bin/arm-linux-gnueabihf-strip
  commands:
