--- a/etc/ci/buildbot_steps.yml
+++ b/etc/ci/buildbot_steps.yml
@@ -226,7 +226,7 @@ arm32:
   LD: /usr/bin/arm-linux-gnueabihf-ld
   OBJCOPY: /usr/bin/arm-linux-gnueabihf-objcopy
   OBJDUMP: /usr/bin/arm-linux-gnueabihf-objdump
-  PKG_CONFIG_ALLOW_CROSS: 1
+  # PKG_CONFIG_ALLOW_CROSS: 1
   RANLIB: /usr/bin/arm-linux-gnueabihf-ranlib
   STRIP: /usr/bin/arm-linux-gnueabihf-strip
  commands:
