--- a/tests/wpt/metadata/css/css-animations/idlharness.html.ini
+++ b/tests/wpt/metadata/css/css-animations/idlharness.html.ini
@@ -36,3 +36,39 @@
     expected: FAIL
   [CSSKeyframeRule interface: keyframes.cssRules\[0\] must inherit property "keyText" with the proper type]
     expected: FAIL
+
+  [HTMLElement interface: attribute onanimationstart]
+    expected: FAIL
+
+  [HTMLElement interface: attribute onanimationiteration]
+    expected: FAIL
+
+  [HTMLElement interface: attribute onanimationend]
+    expected: FAIL
+
+  [HTMLElement interface: attribute onanimationcancel]
+    expected: FAIL
+
+  [Window interface: attribute onanimationstart]
+    expected: FAIL
+
+  [Window interface: attribute onanimationiteration]
+    expected: FAIL
+
+  [Window interface: attribute onanimationend]
+    expected: FAIL
+
+  [Window interface: attribute onanimationcancel]
+    expected: FAIL
+
+  [Document interface: attribute onanimationstart]
+    expected: FAIL
+
+  [Document interface: attribute onanimationiteration]
+    expected: FAIL
+
+  [Document interface: attribute onanimationend]
+    expected: FAIL
+
+  [Document interface: attribute onanimationcancel]
+    expected: FAIL
