Updated exceptions for /dom

--- a/tests/wpt/metadata/dom/interfaces.html.ini
+++ b/tests/wpt/metadata/dom/interfaces.html.ini
@@ -1140,6 +1140,51 @@
     expected: FAIL
   [Window interface: attribute event]
     expected: FAIL
+  [Event interface: attribute cancelBubble]
+    expected: FAIL
+  [Event interface: document.createEvent("Event") must inherit property "cancelBubble" with the proper type]
+    expected: FAIL
+  [Event interface: new Event("foo") must inherit property "cancelBubble" with the proper type]
+    expected: FAIL
+  [Event interface: new CustomEvent("foo") must inherit property "cancelBubble" with the proper type]
+    expected: FAIL
+  [Document interface: operation prepend(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Document interface: operation append(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [DocumentType interface: operation before(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [DocumentType interface: operation after(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [DocumentType interface: operation replaceWith(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [DocumentType interface: operation remove()]
+    expected: FAIL
+  [DocumentFragment interface: operation prepend(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [DocumentFragment interface: operation append(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Element interface: operation prepend(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Element interface: operation append(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Element interface: operation before(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Element interface: operation after(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Element interface: operation replaceWith(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [Element interface: operation remove()]
+    expected: FAIL
+  [CharacterData interface: operation before(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [CharacterData interface: operation after(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [CharacterData interface: operation replaceWith(\[object Object\],\[object Object\])]
+    expected: FAIL
+  [CharacterData interface: operation remove()]
+    expected: FAIL
+
 
 [interfaces.html?include=Node]
   [DOM IDL tests]
