--- a/tests/wpt/metadata/fetch/api/idl.any.js.ini
+++ b/tests/wpt/metadata/fetch/api/idl.any.js.ini
@@ -54,6 +54,11 @@
     expected: FAIL
   [Response interface: new Response() must inherit property "body" with the proper type]
     expected: FAIL
+  [WorkerGlobalScope interface: calling fetch(RequestInfo, RequestInit) on self with too few arguments must throw TypeError]
+    expected: FAIL
+  [WorkerGlobalScope interface: operation fetch(RequestInfo, RequestInit)]
+    expected: FAIL
+
 
 [idl.any.html]
   [Untitled]
@@ -111,6 +116,10 @@
     expected: FAIL
   [Response interface: new Response() must inherit property "body" with the proper type]
     expected: FAIL
+  [Window interface: calling fetch(RequestInfo, RequestInit) on window with too few arguments must throw TypeError]
+    expected: FAIL
+  [Window interface: operation fetch(RequestInfo, RequestInit)]
+    expected: FAIL
 
 
 [idl.any.sharedworker.html]
@@ -131,6 +140,7 @@
 
 
 [idl.any.serviceworker.html]
+  expected: TIMEOUT
   [idl]
     expected: FAIL
 
