--- a/tests/wpt/metadata/fetch/api/response/response-stream-with-broken-then.any.js.ini
+++ b/tests/wpt/metadata/fetch/api/response/response-stream-with-broken-then.any.js.ini
@@ -12,6 +12,16 @@
 
   [response-stream-with-broken-then]
     expected: FAIL
+  [Attempt to inject {done: false, value: bye} via Object.prototype.then.]
+    expected: FAIL
+  [Attempt to inject value: undefined via Object.prototype.then.]
+    expected: FAIL
+  [Attempt to inject undefined via Object.prototype.then.]
+    expected: FAIL
+  [Attempt to inject 8.2 via Object.prototype.then.]
+    expected: FAIL
+  [intercepting arraybuffer to body readable stream conversion via Object.prototype.then should not be possible]
+    expected: FAIL
 
 
 [response-stream-with-broken-then.any.worker.html]
@@ -25,6 +35,17 @@
     expected: FAIL
   [Inject 8.2 via Object.prototype.then.]
     expected: FAIL
+  [Attempt to inject {done: false, value: bye} via Object.prototype.then.]
+    expected: FAIL
+  [Attempt to inject value: undefined via Object.prototype.then.]
+    expected: FAIL
+  [Attempt to inject undefined via Object.prototype.then.]
+    expected: FAIL
+  [Attempt to inject 8.2 via Object.prototype.then.]
+    expected: FAIL
+  [intercepting arraybuffer to body readable stream conversion via Object.prototype.then should not be possible]
+    expected: FAIL
+
 
   [response-stream-with-broken-then]
     expected: FAIL
