Updated exceptions for /performance-timeline

--- a/tests/wpt/metadata/performance-timeline/idlharness.any.js.ini
+++ b/tests/wpt/metadata/performance-timeline/idlharness.any.js.ini
@@ -7,15 +7,18 @@
 
 
 [idlharness.any.worker.html]
-
   [PerformanceEntry interface: operation toJSON()]
     expected: FAIL
+
   [PerformanceObserver interface: operation takeRecords()]
     expected: FAIL
+
   [PerformanceObserver interface: observer must inherit property "takeRecords()" with the proper type]
     expected: FAIL
+
   [PerformanceEntry interface: mark must inherit property "toJSON()" with the proper type]
     expected: FAIL
+
   [Test default toJSON operation of PerformanceMark]
     expected: FAIL
 
@@ -26,12 +29,16 @@
 
   [PerformanceEntry interface: operation toJSON()]
     expected: FAIL
+
   [PerformanceObserver interface: operation takeRecords()]
     expected: FAIL
+
   [PerformanceObserver interface: observer must inherit property "takeRecords()" with the proper type]
     expected: FAIL
+
   [PerformanceEntry interface: mark must inherit property "toJSON()" with the proper type]
     expected: FAIL
+
   [Test default toJSON operation of PerformanceMark]
     expected: FAIL
 
@@ -39,12 +46,12 @@
 [idlharness.https.any.serviceworker.html]
   type: testharness
   expected: TIMEOUT
-
   [idlharness]
     expected: FAIL
 
 
 [idlharness.any.serviceworker.html]
+  expected: TIMEOUT
   [idlharness]
     expected: FAIL
 
