Updated exceptions for /workers

--- a/tests/wpt/metadata/workers/modules/dedicated-worker-import.any.js.ini
+++ b/tests/wpt/metadata/workers/modules/dedicated-worker-import.any.js.ini
@@ -1,44 +1,55 @@
 [dedicated-worker-import.any.worker.html]
   type: testharness
   expected: ERROR
-
   [dedicated-worker-import]
     expected: FAIL
 
   [Static import.]
-    expected: TIMEOUT
+    expected: FAIL
+
   [Nested static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Static import and then dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Nested dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import and then static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [eval(import()).]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [dedicated-worker-import.any.html]
   type: testharness
   expected: ERROR
-
   [dedicated-worker-import]
     expected: FAIL
 
   [Static import.]
-    expected: TIMEOUT
+    expected: FAIL
+
   [Nested static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Static import and then dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Nested dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import and then static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [eval(import()).]
-    expected: NOTRUN
+    expected: FAIL
+
