--- a/tests/wpt/metadata/workers/modules/dedicated-worker-import-blob-url.any.js.ini
+++ b/tests/wpt/metadata/workers/modules/dedicated-worker-import-blob-url.any.js.ini
@@ -1,47 +1,58 @@
 [dedicated-worker-import-blob-url.any.worker.html]
   type: testharness
   expected: ERROR
-
   [dedicated-worker-import-blob-url]
     expected: FAIL
 
   [Static import.]
-    expected: TIMEOUT
+    expected: FAIL
+
   [Nested static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Static import and then dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Nested dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import and then static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [eval(import()).]
-    expected: NOTRUN
-  [\[Parent\]]
+    expected: FAIL
+
+  [[Parent\]]
     expected: ERROR
 
 
 [dedicated-worker-import-blob-url.any.html]
   type: testharness
   expected: ERROR
-
   [dedicated-worker-import-blob-url]
     expected: FAIL
 
   [Static import.]
-    expected: TIMEOUT
+    expected: FAIL
+
   [Nested static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Static import and then dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Nested dynamic import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [Dynamic import and then static import.]
-    expected: NOTRUN
+    expected: FAIL
+
   [eval(import()).]
-    expected: NOTRUN
+    expected: FAIL
 
