Updated expectations for /fetch

--- a/tests/wpt/metadata/fetch/cors-rfc1918/idlharness.tentative.any.js.ini
+++ b/tests/wpt/metadata/fetch/cors-rfc1918/idlharness.tentative.any.js.ini
@@ -1,8 +1,10 @@
 [idlharness.tentative.any.html]
   [idlharness]
     expected: FAIL
+
   [Document interface: attribute addressSpace]
     expected: FAIL
+
   [Document interface: document must inherit property "addressSpace" with the proper type]
     expected: FAIL
 
@@ -10,8 +12,10 @@
 [idlharness.tentative.any.worker.html]
   [idlharness]
     expected: FAIL
+
   [WorkerGlobalScope interface: attribute addressSpace]
     expected: FAIL
+
   [WorkerGlobalScope interface: self must inherit property "addressSpace" with the proper type]
     expected: FAIL
 
@@ -19,13 +23,13 @@
 [idlharness.tentative.https.any.serviceworker.html]
   expected: TIMEOUT
 
-
 [idlharness.tentative.any.sharedworker.html]
   [idlharness]
     expected: FAIL
 
 
 [idlharness.tentative.any.serviceworker.html]
+  expected: TIMEOUT
   [idlharness]
     expected: FAIL
 
