--- a/etc/ci/buildbot_steps.yml
+++ b/etc/ci/buildbot_steps.yml
@@ -216,12 +216,10 @@ arm32:
   AR: /usr/bin/arm-linux-gnueabihf-ar
   AS: /usr/bin/arm-linux-gnueabihf-as
   CC: /usr/bin/clang-4.0
-  CC_arm-unknown-linux-gnueabihf: /usr/bin/clang-4.0
   CFLAGS: --target=arm-unknown-linux-gnueabihf -march=armv7a -I/usr/arm-linux-gnueabihf/include/ -fuse-ld=/home/servo/servo/support/arm32/fake-ld.sh -Wno-error=unused-command-line-argument
   CPP: /usr/bin/clang-4.0 -E
   CPPFLAGS: -I/usr/arm-linux-gnueabihf/include
   CXX: /usr/bin/clang++-4.0
-  CXX_arm-unknown-linux-gnueabihf: /usr/bin/clang++-4.0
   CXXFLAGS: --target=arm-unknown-linux-gnueabihf -march=armv7a -I/usr/arm-linux-gnueabihf/include/ -I/usr/arm-linux-gnueabihf/include/c++/4.8.4/arm-linux-gnueabihf -fuse-ld=/home/servo/servo/support/arm32/fake-ld.sh -Wno-error=unused-command-line-argument
   HOST_CC: gcc-5
   HOST_CFLAGS: ""
@@ -236,7 +234,7 @@ arm32:
   - ./mach clean-nightlies --keep 3 --force
   - ./mach clean-cargo-cache --keep 3 --force
   - ./etc/ci/clean_build_artifacts.sh
-  - ./mach build --rel --target=arm-unknown-linux-gnueabihf
+  - env --unset CC_arm-unknown-linux-gnueabihf --unset CXX_arm-unknown-linux-gnueabihf ./mach build --rel --target=arm-unknown-linux-gnueabihf
   - bash ./etc/ci/lockfile_changed.sh
   - ./etc/ci/clean_build_artifacts.sh
 
