Updated expectations for /html/dom

--- a/tests/wpt/metadata/html/dom/interfaces.https.html.ini
+++ b/tests/wpt/metadata/html/dom/interfaces.https.html.ini
@@ -6145,6 +6145,9 @@
   [Partial interface Document: original interface defined]
     expected: FAIL
 
+  [idl_test setup]
+    expected: FAIL
+
 
 [interfaces.https.html?include=HTML.*]
   [HTML IDL tests]
@@ -9777,6 +9780,9 @@
   [Partial interface Document: original interface defined]
     expected: FAIL
 
+  [idl_test setup]
+    expected: FAIL
+
 
 [interfaces.https.html?exclude=(Document|Window|HTML.*)]
   [HTML IDL tests]
@@ -11415,5 +11421,8 @@
     expected: FAIL
 
   [Partial interface Document: original interface defined]
+    expected: FAIL
+
+  [idl_test setup]
     expected: FAIL
 
